# darray

./: CMakeLists.txt  README.md  coverage_html.sh  main.c  strassen.c  strassen.h  utils.c  utils.h
old/: Makefile
tests/: strassen.cpp
